--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="row">
-        <div class="col col-xs-2">
+        <div class="col col-xs-6 col-md-2">
           <div class="form-group">
             <select 
               class="form-control"
