using one js file for all

--- a/57fp60.html
+++ b/57fp60.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.4/lodash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.js"></script>
     <script src="https://cdn.rawgit.com/WebDevTmas/moment-round/master/src/moment-round.js"></script>
-    <script src="57fp60_babel.js"></script>
+    <script src="thread_babel.js"></script>
 
   </head>
   <body ng-controller="main as MC">
