--- a/59tp6p.html
+++ b/59tp6p.html
@@ -70,7 +70,7 @@
                 <td>
                   <input type="checkbox"
                     ng-model="comment.checked"
-                    ng-click="$event.stopPropagation()" />
+                    ng-click="MC.checkClicked($event, comment)" />
                 </td>
                 <td ng-bind="comment.author"  ></td>
                 <td ng-bind="comment.count"></td>
