better formatting and stuff

--- a/mooseleague/calendar.html
+++ b/mooseleague/calendar.html
@@ -13,6 +13,8 @@
       <td>{{event.date}}</td>
       <td>
         <a ui-sref="{{event.state}}" href="">Start List</a>
+        |
+        Results
       </td>
     </tr>
   </tbody>
