--- a/mooseleague/event.html
+++ b/mooseleague/event.html
@@ -1,29 +1,50 @@
-<div class="jumbotron jumbotron-fluid">
-  <h2>{{EC.event.name}} - {{EC.event.date}}</h2>
-</div>
+
+<h2>{{EC.event.name}} - {{EC.event.date}}</h2>
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" ng-class="{'active': EC.tab === 'start'}" href="" ng-click="EC.changeTab('start')">
-  </a>
+    <a class="nav-link" ng-class="{'active': EC.tab === 'start'}" href="" ng-click="EC.changeTab('start')">Start List</a>
+  </li>
   <li class="nav-item">
-    <a class="nav-link" ng-class="{'active': EC.tab === 'results'}" href="" ng-click="EC.changeTab('results')">
-  </a>
-</li>
+    <a class="nav-link" ng-class="{'active': EC.tab === 'results'}" href="" ng-click="EC.changeTab('results')">Results</a>
+  </li>
+</ul>
 
-<div ng-repeat="league in EC.event.leagues" ng-show="EC.tab === 'start'">
-  <h4>{{league.name}}</h4>
-  <table class="table table-sm">
+<div ng-show="EC.tab === 'start'">
+  <div ng-repeat="league in EC.event.leagues">
+    <h4>{{league.name}}</h4>
+    <table class="table table-sm">
+      <thead class="thead-inverse">
+        <tr>
+          <th style="width: 25px;">Lane</th>
+          <th style="width: 50%;">Name</th>
+          <th style="width: 40px;">VDOT</th>
+          <th>Note</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="ent in league.entrants">
+          <td>{{ent.lane}}</td>
+          <td>{{ent.user}}</td>
+          <td>{{ent.VDOT || ''}}</td>
+          <td>{{ent.note}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <h4>Head to Head</h4>
+  <table class="table table-sm" ng-repeat="h2h in EC.event.h2h">
     <thead class="thead-inverse">
       <tr>
-        <th>Lane</th>
-        <th>Name</th>
-        <th>VDOT</th>
+        <th style="width: 25px;">Lane</th>
+        <th style="width: 50%;">Name</th>
+        <th style="width: 40px;">VDOT</th>
         <th>Note</th>
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="ent in league.entrants">
+      <tr ng-repeat="ent in h2h.entrants">
         <td>{{ent.lane}}</td>
         <td>{{ent.user}}</td>
         <td>{{ent.VDOT || ''}}</td>
@@ -33,19 +54,24 @@
   </table>
 </div>
 
-<div ng-repeat="league in EC.event.leagues" ng-show="EC.tab === 'results'">
-  <h4>{{league.name}}</h4>
-  <table class="table table-sm">
-    <thead class="thead-inverse">
-      <tr>
-        <th>Name</th>
-        <th>Time</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="ent in league.entrants">
-        <td>{{ent.user}}</td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
+<div  ng-show="EC.tab === 'results'">
+  <div ng-repeat="league in EC.event.leagues">
+    <h4>{{league.name}}</h4>
+    <table class="table table-sm">
+      <thead class="thead-inverse">
+        <tr>
+          <th style="width: 25px;">Place</th>
+          <th>Name</th>
+          <th>Time</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="ent in league.entrants">
+          <td></td>
+          <td>{{ent.user}}</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
