--- a/mooseleague/event.html
+++ b/mooseleague/event.html
@@ -103,7 +103,7 @@
   <table class="table table-sm">
     <thead class="thead-inverse">
       <tr>
-        <th style="width: 25px;">Overall</th>
+        <th style="width: 25px;">Place</th>
         <th style="width: 50%;">Name</th>
         <th style="width: 20%;">Time</th>
         <th>Points</th>
