fixing date issue

--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="col col-md-3">
 
-          <div class="card next-meet">
+          <div class="card next-meet" fixed-top="55">
             <div class="card-block">
               <h5 class="card-title">NEXT MEETING: {{MC.next.name}}</h5>
               <div class="row">
