--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.4/lodash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
-    <script src="mooseleague.js"></script>
+    <script src="mooseleague_babel.js"></script>
 
   </head>
   <body ng-controller="main as MC" style="padding-top: 5rem;">
