--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -6,12 +6,17 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" >
 
+    <!--  one of these will fail -->
+    <link rel="stylesheet" href="https://jgr3go.github.io/reddit_ar/mooseleague/mooseleague.css">
     <link rel="stylesheet" href="mooseleague.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.4/lodash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+
+    <!-- one of these will fail too -->
+    <script src="https://jgr3go.github.io/reddit_ar/mooseleague/mooseleague_babel.js"></script>
     <script src="mooseleague_babel.js"></script>
 
   </head>
