--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -19,6 +19,7 @@
     <script src="mooseleague_babel.js"></script>
     <script src="https://jgr3go.github.io/reddit_ar/mooseleague/mooseleague_babel.js"></script>
     
+    <link rel="icon" href="favicon.png" type="image/png">
 
   </head>
   <body ng-controller="main as MC" style="padding-top: 5rem;">
