--- a/mooseleague/calendar.html
+++ b/mooseleague/calendar.html
@@ -14,6 +14,8 @@
       <td>{{event.date}}</td>
       <td>{{event.events}}</td>
       <td>
+        <a href="{{event.link}}" target="_blank"><img src="snoo.ico" style="height: 1rem;"></a>
+        |
         <a ui-sref="{{event.state}}" href="">Start List</a>
         |
         Results
