showing Request Edit link

--- a/mooseleague/event.html
+++ b/mooseleague/event.html
@@ -14,6 +14,10 @@
   </li>
 </ul>
 
+<a href="https://github.com/jgr3go/reddit_ar/blob/master/mooseleague/{{EC.event.file}}" 
+      target="_blank"
+      style="float: right; font-size: .9rem;">Request Edit</a>
+
 <div ng-show="EC.tab === 'start'">
   <div ng-repeat="league in EC.event.leagues">
     <h4>{{league.name}}</h4>
