--- a/mooseleague/event.html
+++ b/mooseleague/event.html
@@ -20,7 +20,11 @@
 
 <div ng-show="EC.tab === 'start'">
   <div ng-repeat="league in EC.event.leagues">
-    <h4>{{league.name}}</h4>
+    <a id="{{league.anchor}}"></a>
+    <h4>
+      {{league.name}}
+      <a href="" ng-click="EC.scrollTo(league)" class="fa fa-link clickable link"></a>
+    </h4>
     <table class="table table-sm">
       <thead class="thead-inverse">
         <tr>
