--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!--  one of these will fail -->
     <link rel="stylesheet" href="https://jgr3go.github.io/reddit_ar/mooseleague/mooseleague.css">
