--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -20,6 +20,13 @@
     <script src="mooseleague_babel.js"></script>
     <script src="https://jgr3go.github.io/reddit_ar/mooseleague/mooseleague_babel.js"></script>
     
+    <title>ARTC Moose League</title>
+    <meta name="description" content="Advanced Running Track Club's Summer Track League events and standings">
+    <meta property="og:title" content="AR Moose League">
+    <meta property="og:description" content="Advanced Running Track Club's Summer Track League events and standings">
+    <meta property="og:url" content="http://mooseleague.com">
+    <meta property="og:image" content="https://jgr3go.github.io/reddit_ar/mooseleague/metaimage.png">
+
     <link rel="icon" href="favicon.png" type="image/png">
 
   </head>
