fixing canonical url

--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -24,7 +24,7 @@
     <meta name="description" content="Advanced Running Track Club's Summer Track League events and standings">
     <meta property="og:title" content="AR Moose League">
     <meta property="og:description" content="Advanced Running Track Club's Summer Track League events and standings">
-    <meta property="og:url" content="http://mooseleague.com">
+    <meta property="og:url" content="http://www.mooseleague.com/">
     <meta property="og:image" content="https://jgr3go.github.io/reddit_ar/mooseleague/metaimage.png">
 
     <link rel="icon" href="favicon.png" type="image/png">
