--- a/mooseleague/event.html
+++ b/mooseleague/event.html
@@ -106,6 +106,7 @@
         <th style="width: 25px;">Place</th>
         <th style="width: 50%;">Name</th>
         <th>Time</th>
+        <th>Strava</th>
       </tr>
     </thead>
     <tbody>
@@ -115,6 +116,7 @@
         <td>{{ $index + 1 }}</td>
         <td>{{ent.user}}</td>
         <td>{{ent.time}}</td>
+        <td><a href="{{ent.strava}}" ng-show="ent.strava" target="_blank"><img src="https://www.strava.com/favicon.ico" style="height: 1rem;"></a></td>
       </tr>
     </tbody>
   </table>
