i'm bad at coding

--- a/mooseleague/event.html
+++ b/mooseleague/event.html
@@ -131,7 +131,7 @@
         <th style="width: 15%;">Note</th>
         <th>Time</th>
         <th>Points</th>
-        <td>Strava</td>
+        <th>Strava</th>
       </tr>
     </thead>
     <tbody>
