sorting by headings

--- a/mooseleague/event.html
+++ b/mooseleague/event.html
@@ -149,8 +149,10 @@
         <th ng-repeat-start="evt in EC.event.events" 
             style="width: 10%; white-space: pre; cursor: pointer;"
             ng-click="EC.sortWinnersBy('event', $index)">{{EC.event.events.length > 1 ? evt + '\n' : ''}}Time</th>
-        <th ng-repeat-end>Points</th>
-        <th ng-show="EC.event.events.length > 1">Meet Points</th>
+        <th ng-repeat-end
+            ng-click="EC.sortWinnersBy('event', $index)">Points</th>
+        <th ng-show="EC.event.events.length > 1"
+            ng-click="EC.sortWinnersBy('place')">Meet Points</th>
         <th>Links</th>
       </tr>
     </thead>
