--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -48,6 +48,9 @@
               <a ng-repeat="evt in MC.events" href="" ui-sref="{{evt.state}}">{{evt.name}}</a>
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" ui-sref="Leaderboard" href="">Leaderboard</a>
+          </li>
         </ul>
       </div>
     </nav>
