--- a/mooseleague/calendar.html
+++ b/mooseleague/calendar.html
@@ -1,4 +1,5 @@
 
+
 <table class="table table-sm">
   <thead class="thead-inverse">
     <tr>
@@ -23,3 +24,7 @@
     </tr>
   </tbody>
 </table>
+
+<h6 style="text-align: center;">
+  <a href="" ui-sref="Leaderboard">View Leaderboard</a>
+</h6>
