--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -123,6 +123,10 @@
       ga('send', 'pageview');
 
     </script>
-    
+
+    <div style="position: fixed; bottom: 0; right: 0;" ng-if="!MC.isMobile">
+     <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/337460668&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    </div>
+
   </body>
 </html>
