--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -125,7 +125,8 @@
     </script>
 
     <div style="position: fixed; bottom: 0; right: 0;" ng-if="!MC.isMobile">
-     <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/337460668&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+     <div style="float: right;" ng-click="MC.stopAutoplay()"><small><a href="">Turn off auto-play</a></small></div>
+     <iframe width="100%" height="100" scrolling="no" frameborder="no" ng-src="{{MC.getThemeUrl()}}"></iframe>
     </div>
 
   </body>
