--- a/mooseleague/calendar.html
+++ b/mooseleague/calendar.html
@@ -15,8 +15,8 @@
       <td>{{event.date}}</td>
       <td>{{event.events}}</td>
       <td>
-        <a ui-sref="{{event.state}}({tab: 'start'})" href="">Start List</a>
-        |
+        <!-- <a ui-sref="{{event.state}}({tab: 'start'})" href="">Start List</a>
+        | -->
         <a ui-sref="{{event.state}}({tab: 'results'})" href="">Results</a>
         |
         <a href="{{event.link}}" target="_blank"><img src="snoo.ico" style="height: 1rem;"></a>
@@ -25,6 +25,6 @@
   </tbody>
 </table>
 
-<h6 style="text-align: center;">
+<!-- <h6 style="text-align: center;">
   <a href="" ui-sref="Leaderboard">View Leaderboard</a>
-</h6>
+</h6> -->
