--- a/mooseleague/index.html
+++ b/mooseleague/index.html
@@ -16,9 +16,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.4/lodash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
 
-
+    <script>byx='AIzaSyCzp'</script>
 
     <script src="https://apis.google.com/js/api.js"></script>
+
+    <script>lmw='g65ZjLzc5tqE'</script>
 
     <!-- one of these will fail too -->
     
