--- a/mooseleague/calendar.html
+++ b/mooseleague/calendar.html
@@ -19,7 +19,7 @@
         | -->
         <a ui-sref="{{event.state}}({tab: 'results'})" href="">Results</a>
         |
-        <a href="{{event.link}}" target="_blank"><img src="snoo.ico" style="height: 1rem;"></a>
+        <a href="{{event.link}}" target="_blank"><img src="https://reddit.com/favicon.ico" style="height: 1rem;"></a>
       </td>
     </tr>
   </tbody>
